Update and rename quanh.html to index.html

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ var ParticlePool = (function() {
 
         margin-bottom: 5px;
 
-        text-align: center;">Nguyễn Hồng Trang</div>
+        text-align: center;">Vũ Thu Hà</div>
  </BODY>
 
 </HTML>
